# usg-uc

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  PERF_ROADMAP.md  PROTO_RFC_COMPLIANCE.md  ROADMAP.md  SBC_RFC_Implementation_Guide.md  codecov.yml  create-icon.ps1  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
audio_files/: All_circuits_busy.pcm  Not_in_service.pcm
ci/image/: .dockerignore  Dockerfile  README.md  build.sh  gitlab-ci-example.yml
crates/client/: CNSA_COMPLIANCE.md
crates/client/client-audio/: Cargo.toml
crates/client/client-core/: Cargo.toml
crates/client/client-gui/: Cargo.toml  build.rs
crates/client/client-gui-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/client/client-gui-windows/: Cargo.toml  app.manifest
crates/client/client-integration-tests/: Cargo.toml
crates/client/client-sip-ua/: Cargo.toml
crates/client/client-types/: Cargo.toml
crates/client/installer/: README.md  build-installer.ps1  usg-sip-client.wxs
crates/proto-b2bua/: Cargo.toml
crates/proto-b2bua/src/: early_media.rs  leg.rs  lib.rs
crates/proto-dialog/src/: lib.rs  refer.rs  session_timer.rs  subscription.rs
crates/proto-registrar/: Cargo.toml
crates/proto-registrar/src/: binding.rs  error.rs  lib.rs  registrar.rs
crates/proto-sip/: Cargo.toml
crates/proto-sip/src/: auth.rs  builder.rs  error.rs  header_params.rs  message.rs
crates/proto-transaction/src/: error.rs  lib.rs  server.rs
crates/proto/proto-b2bua/: Cargo.toml
crates/proto/proto-dialog/: Cargo.toml
crates/proto/proto-dtls/: Cargo.toml
crates/proto/proto-ice/: Cargo.toml
crates/proto/proto-registrar/: Cargo.toml
crates/proto/proto-rtp/: Cargo.toml
crates/proto/proto-sdp/: Cargo.toml
crates/proto/proto-sip/: Cargo.toml
crates/proto/proto-srtp/: Cargo.toml
crates/proto/proto-stir-shaken/: Cargo.toml
crates/proto/proto-stun/: Cargo.toml
crates/proto/proto-transaction/: Cargo.toml
crates/proto/proto-turn/: Cargo.toml
crates/sbc-acl/: Cargo.toml
crates/sbc-acl/src/: error.rs  lib.rs  network.rs
crates/sbc-api/: Cargo.toml
crates/sbc-api/src/: error.rs  lib.rs  request.rs  response.rs
crates/sbc-audit/: Cargo.toml
crates/sbc-audit/src/: event.rs  lib.rs  record.rs  sink.rs
crates/sbc-b2bua/: Cargo.toml
crates/sbc-b2bua/src/: call.rs  error.rs  lib.rs
crates/sbc-cdr/: Cargo.toml
crates/sbc-cdr/src/: format.rs  lib.rs
crates/sbc-cli/: Cargo.toml
crates/sbc-cli/src/: main.rs  output.rs
crates/sbc-cli/src/commands/: calls.rs  health.rs  metrics.rs
crates/sbc-codecs/: Cargo.toml
crates/sbc-codecs/src/: error.rs  g711.rs  g722.rs  lib.rs  opus.rs  opus_ffi.rs
crates/sbc-config/: Cargo.toml
crates/sbc-config/src/: error.rs  lib.rs  schema.rs  validate.rs
crates/sbc-crypto/: Cargo.toml
crates/sbc-crypto/src/: ecdh.rs  error.rs  hash.rs  hkdf.rs  lib.rs  random.rs
crates/sbc-daemon/: Cargo.toml
crates/sbc-daemon/src/: api_server.rs  ice_agent.rs  main.rs  media_pipeline.rs  runtime.rs  server.rs  shutdown.rs  sip_stack.rs
crates/sbc-dialog/: Cargo.toml
crates/sbc-dialog/src/: dialog.rs  error.rs  lib.rs  session_timer.rs
crates/sbc-dos-protection/: Cargo.toml
crates/sbc-dos-protection/src/: error.rs  lib.rs  limiter.rs
crates/sbc-dtls/: Cargo.toml
crates/sbc-dtls/src/: cipher_suite.rs  connection.rs  error.rs  fingerprint.rs  handshake.rs  lib.rs  record.rs  session.rs
crates/sbc-health/: Cargo.toml
crates/sbc-health/src/: lib.rs  status.rs
crates/sbc-ice/: Cargo.toml
crates/sbc-ice/src/: agent.rs  candidate.rs  checklist.rs  error.rs  lib.rs
crates/sbc-integration-tests/: Cargo.toml
crates/sbc-integration-tests/src/: config_tests.rs  health_tests.rs  lib.rs  metrics_tests.rs  policy_tests.rs
crates/sbc-media-engine/: Cargo.toml
crates/sbc-media-engine/src/: error.rs  lib.rs  session.rs
crates/sbc-metrics/: Cargo.toml
crates/sbc-metrics/src/: counter.rs  histogram.rs  lib.rs  registry.rs
crates/sbc-policy/: Cargo.toml
crates/sbc-policy/src/: action.rs  condition.rs  error.rs  lib.rs
crates/sbc-registrar/: Cargo.toml
crates/sbc-registrar/src/: lib.rs  location.rs  registrar.rs
crates/sbc-routing/: Cargo.toml
crates/sbc-routing/src/: dialplan.rs  error.rs  lib.rs  trunk.rs
crates/sbc-rtp/: Cargo.toml
crates/sbc-rtp/src/: error.rs  lib.rs  sequence.rs
crates/sbc-sdp/: Cargo.toml
crates/sbc-sdp/src/: error.rs  lib.rs
crates/sbc-sip/: Cargo.toml
crates/sbc-sip/src/: header.rs  lib.rs  message.rs  method.rs  response.rs  uri.rs
crates/sbc-srtp/: Cargo.toml
crates/sbc-srtp/src/: key.rs  lib.rs  protect.rs
crates/sbc-stir-shaken/: Cargo.toml
crates/sbc-stir-shaken/src/: error.rs  lib.rs  passport.rs  verification.rs
crates/sbc-stun/: Cargo.toml
crates/sbc-stun/src/: client.rs  error.rs  lib.rs  message.rs
crates/sbc-transaction/: Cargo.toml
crates/sbc-transaction/src/: client.rs  error.rs  lib.rs  server.rs
crates/sbc-transport/: Cargo.toml
crates/sbc-transport/src/: error.rs  lib.rs  listener.rs  tcp.rs  tls.rs  udp.rs
crates/sbc-turn/: Cargo.toml
crates/sbc-turn/src/: allocation.rs  (+5 more)
crates/sbc-types/: Cargo.toml
crates/sbc-types/src/: address.rs  attestation.rs  codec.rs  error.rs  identifier.rs  lib.rs  nist.rs
deploy/ansible/: configure-sbc.yml  inventory.yml
deploy/config/: config.toml
deploy/docs/: RUNBOOK.md
deploy/k8s-local/: kind-config.yaml  metallb.yaml  multus-networks.yaml  namespace.yaml  sbc-configmap.yaml  sbc-daemonset.yaml  sbc-seed.json  sbc-services.yaml  setup.sh  teardown.sh
deploy/kubernetes/: configmap.yaml  deployment.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  rbac.yaml  service.yaml
deploy/test/: README.md  docker-compose.yml  run-stress-test.sh  sbc-test.toml  sipp-uac-register-call.xml  stress-test-native.py  stress-test-rtp.py
docs/: API-REFERENCE.md  CLUSTERING.md  CNSA-2-COMPLIANCE.md  G711_ITU_Compliance.md  NIST-800-53-CONTROLS.md  RFC_COMPLIANCE_GAPS.md  SBC-ADMIN-GUIDE.md  SDP_RFC_Compliance.md  STORAGE-BACKENDS.md  route-patterns.md
(+526 files in other folders)
