[workspace]
members = [
    # Layer 0: Foundation
    "crates/sbc-types",
    "crates/sbc-crypto",
    "crates/sbc-audit",
    "crates/sbc-config",

    # Layer 1: Transport
    "crates/sbc-transport",
    "crates/sbc-dtls",

    # Layer 2: Protocol Core
    "crates/sbc-sip",
    "crates/sbc-sdp",
    "crates/sbc-rtp",
    "crates/sbc-srtp",

    # Layer 3: NAT/ICE
    "crates/sbc-ice",
    "crates/sbc-stun",
    "crates/sbc-turn",

    # Layer 4: Media Engine
    "crates/sbc-codecs",
    "crates/sbc-media-engine",

    # Layer 5: SIP Application
    "crates/sbc-transaction",
    "crates/sbc-dialog",
    "crates/sbc-b2bua",
    "crates/sbc-registrar",

    # Layer 6: Security Services
    "crates/sbc-stir-shaken",
    "crates/sbc-acl",
    "crates/sbc-dos-protection",

    # Layer 7: Orchestration
    "crates/sbc-policy",
    "crates/sbc-routing",
    "crates/sbc-cdr",

    # Layer 8: Management
    "crates/sbc-api",
    "crates/sbc-metrics",
    "crates/sbc-health",

    # Binaries
    "crates/sbc-daemon",
    "crates/sbc-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
# Note: Will migrate to edition 2024 and rust-version 1.92 when available
# Per CONTRIBUTING.md requirements
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/usg/usg-uc-sbc"
keywords = ["sip", "sbc", "voip", "session-border-controller", "cnsa"]
categories = ["network-programming", "multimedia"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Cryptography (CNSA 2.0 compliant)
aws-lc-rs = { version = "1.12", default-features = false }
rustls = { version = "0.23", default-features = false, features = [
    "aws-lc-rs",
    "tls12",
] }
zeroize = { version = "1.8", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

# Error handling
thiserror = "2.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Validation
validator = { version = "0.20", features = ["derive"] }

# Networking
bytes = "1.9"
socket2 = { version = "0.6", features = ["all"] }

# Internal crates
sbc-types = { path = "crates/sbc-types" }
sbc-crypto = { path = "crates/sbc-crypto" }
sbc-audit = { path = "crates/sbc-audit" }
sbc-config = { path = "crates/sbc-config" }
sbc-transport = { path = "crates/sbc-transport" }
sbc-dtls = { path = "crates/sbc-dtls" }
sbc-sip = { path = "crates/sbc-sip" }
sbc-sdp = { path = "crates/sbc-sdp" }
sbc-rtp = { path = "crates/sbc-rtp" }
sbc-srtp = { path = "crates/sbc-srtp" }
sbc-ice = { path = "crates/sbc-ice" }
sbc-stun = { path = "crates/sbc-stun" }
sbc-turn = { path = "crates/sbc-turn" }
sbc-codecs = { path = "crates/sbc-codecs" }
sbc-media-engine = { path = "crates/sbc-media-engine" }
sbc-transaction = { path = "crates/sbc-transaction" }
sbc-dialog = { path = "crates/sbc-dialog" }
sbc-b2bua = { path = "crates/sbc-b2bua" }
sbc-registrar = { path = "crates/sbc-registrar" }
sbc-stir-shaken = { path = "crates/sbc-stir-shaken" }
sbc-acl = { path = "crates/sbc-acl" }
sbc-dos-protection = { path = "crates/sbc-dos-protection" }
sbc-policy = { path = "crates/sbc-policy" }
sbc-routing = { path = "crates/sbc-routing" }
sbc-cdr = { path = "crates/sbc-cdr" }
sbc-api = { path = "crates/sbc-api" }
sbc-metrics = { path = "crates/sbc-metrics" }
sbc-health = { path = "crates/sbc-health" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
