[workspace]
members = [
    # Layer 0: Foundation (uc-* = reusable UC infrastructure)
    "crates/uc/uc-types",
    "crates/uc/uc-crypto",
    "crates/uc/uc-audit",

    # Layer 1: Transport
    "crates/uc/uc-transport",

    # Layer 2: Protocol Core (proto-* crates)
    "crates/proto/proto-sip",
    "crates/proto/proto-transaction",
    "crates/proto/proto-dialog",
    "crates/proto/proto-b2bua",
    "crates/proto/proto-registrar",
    "crates/proto/proto-sdp",
    "crates/proto/proto-rtp",
    "crates/proto/proto-srtp",
    "crates/proto/proto-dtls",
    "crates/proto/proto-stun",
    "crates/proto/proto-turn",
    "crates/proto/proto-ice",
    "crates/proto/proto-stir-shaken",

    # Layer 3: Media Engine
    "crates/uc/uc-codecs",
    "crates/uc/uc-media-engine",

    # Layer 4: Security (uc-* = reusable)
    "crates/uc/uc-acl",
    "crates/uc/uc-dos-protection",

    # Layer 5: Orchestration (uc-* = reusable)
    "crates/uc/uc-policy",
    "crates/uc/uc-routing",
    "crates/uc/uc-cdr",

    # Layer 6: Recording (uc-* = reusable)
    "crates/uc/uc-siprec",

    # Layer 7: Management (uc-* = reusable)
    "crates/uc/uc-api",
    "crates/uc/uc-metrics",
    "crates/uc/uc-health",

    # SBC Application
    "crates/sbc/sbc-config",
    "crates/sbc/sbc-daemon",
    "crates/sbc/sbc-cli",
    "crates/sbc/sbc-integration-tests",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
# Per CONTRIBUTING.md requirements
edition = "2024"
rust-version = "1.92"
license = "Apache-2.0"
repository = "https://github.com/usg/usg-uc-sbc"
keywords = ["sip", "sbc", "voip", "session-border-controller", "cnsa"]
categories = ["network-programming", "multimedia"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Cryptography (CNSA 2.0 compliant)
aws-lc-rs = { version = "1.12", default-features = false }
rustls = { version = "0.23", default-features = false, features = [
    "aws-lc-rs",
    "tls12",
] }
zeroize = { version = "1.8", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

# Error handling
thiserror = "2.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Validation
validator = { version = "0.20", features = ["derive"] }

# Networking
bytes = "1.11.1"
socket2 = { version = "0.6", features = ["all"] }

# HTTP server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
http = "1.2"
http-body-util = "0.1"
hyper = { version = "1.6", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tokio-rustls = "0.26"
rustls-pki-types = { version = "1.14", features = ["std"] }

# Internal crates - Foundation (uc-* = reusable UC infrastructure)
uc-types = { path = "crates/uc/uc-types" }
uc-crypto = { path = "crates/uc/uc-crypto" }
uc-audit = { path = "crates/uc/uc-audit" }
uc-transport = { path = "crates/uc/uc-transport" }
uc-codecs = { path = "crates/uc/uc-codecs" }
uc-media-engine = { path = "crates/uc/uc-media-engine" }
uc-acl = { path = "crates/uc/uc-acl" }
uc-dos-protection = { path = "crates/uc/uc-dos-protection" }
uc-policy = { path = "crates/uc/uc-policy" }
uc-routing = { path = "crates/uc/uc-routing" }
uc-cdr = { path = "crates/uc/uc-cdr" }
uc-api = { path = "crates/uc/uc-api" }
uc-metrics = { path = "crates/uc/uc-metrics" }
uc-health = { path = "crates/uc/uc-health" }
uc-siprec = { path = "crates/uc/uc-siprec" }

# Internal crates - Protocol (proto/*)
proto-sip = { path = "crates/proto/proto-sip" }
proto-transaction = { path = "crates/proto/proto-transaction" }
proto-dialog = { path = "crates/proto/proto-dialog" }
proto-b2bua = { path = "crates/proto/proto-b2bua" }
proto-registrar = { path = "crates/proto/proto-registrar" }
proto-sdp = { path = "crates/proto/proto-sdp" }
proto-rtp = { path = "crates/proto/proto-rtp" }
proto-srtp = { path = "crates/proto/proto-srtp" }
proto-dtls = { path = "crates/proto/proto-dtls" }
proto-stun = { path = "crates/proto/proto-stun" }
proto-turn = { path = "crates/proto/proto-turn" }
proto-ice = { path = "crates/proto/proto-ice" }
proto-stir-shaken = { path = "crates/proto/proto-stir-shaken" }

# Internal crates - SBC Application
sbc-config = { path = "crates/sbc/sbc-config" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
# unwrap/expect/panic are acceptable in test code, but we want them denied in production code
# Individual test modules should use #[cfg_attr(test, allow(clippy::unwrap_used))]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
