[package]
name = "sbc-acl"
description = "Access control lists and IP filtering"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
sbc-types = { path = "../sbc-types" }
