[package]
name = "sbc-b2bua"
description = "Back-to-back user agent implementation for SBC"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
proto-b2bua = { path = "../proto-b2bua" }

[lints]
workspace = true
