[package]
name = "sbc-cli"
description = "Command-line interface for SBC management"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
sbc-types = { path = "../sbc-types" }

[[bin]]
name = "sbc-cli"
path = "src/main.rs"
