[package]
name = "sbc-daemon"
description = "Main SBC daemon process"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
sbc-types = { path = "../sbc-types" }
sbc-config = { path = "../sbc-config" }
sbc-health = { path = "../sbc-health" }
sbc-metrics = { path = "../sbc-metrics" }

[[bin]]
name = "sbc-daemon"
path = "src/main.rs"
