[package]
name = "sbc-daemon"
description = "Main SBC daemon process"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
sbc-types = { path = "../sbc-types" }
sbc-config = { path = "../sbc-config" }
sbc-health = { path = "../sbc-health" }
sbc-metrics = { path = "../sbc-metrics" }
sbc-transport = { path = "../sbc-transport" }
sbc-sip = { path = "../sbc-sip" }
sbc-transaction = { path = "../sbc-transaction" }
sbc-dialog = { path = "../sbc-dialog" }
sbc-b2bua = { path = "../sbc-b2bua" }
sbc-registrar = { path = "../sbc-registrar" }
sbc-rtp = { path = "../sbc-rtp" }
sbc-srtp = { path = "../sbc-srtp" }
sbc-dtls = { path = "../sbc-dtls" }
sbc-media-engine = { path = "../sbc-media-engine" }
sbc-codecs = { path = "../sbc-codecs" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bytes.workspace = true

[[bin]]
name = "sbc-daemon"
path = "src/main.rs"
