[package]
name = "sbc-daemon"
description = "Main SBC daemon process"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
sbc-types = { path = "../sbc-types" }
sbc-config = { path = "../sbc-config" }
sbc-health = { path = "../sbc-health" }
sbc-metrics = { path = "../sbc-metrics" }
sbc-transport = { path = "../sbc-transport" }
sbc-sip = { path = "../sbc-sip" }
sbc-transaction = { path = "../sbc-transaction" }
sbc-dialog = { path = "../sbc-dialog" }
sbc-b2bua = { path = "../sbc-b2bua" }
sbc-registrar = { path = "../sbc-registrar" }
sbc-rtp = { path = "../sbc-rtp" }
sbc-srtp = { path = "../sbc-srtp" }
sbc-dtls = { path = "../sbc-dtls" }
sbc-media-engine = { path = "../sbc-media-engine" }
sbc-codecs = { path = "../sbc-codecs" }
sbc-stun = { path = "../sbc-stun" }
sbc-turn = { path = "../sbc-turn" }
sbc-ice = { path = "../sbc-ice" }
sbc-api = { path = "../sbc-api" }
sbc-dos-protection = { path = "../sbc-dos-protection" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bytes.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
rustls-pemfile.workspace = true
hyper.workspace = true
hyper-util.workspace = true

[[bin]]
name = "sbc-daemon"
path = "src/main.rs"
