[package]
name = "sbc-dialog"
description = "SIP dialog state management"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
sbc-types.workspace = true
sbc-sip = { path = "../sbc-sip" }
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
