[package]
name = "sbc-dialog"
description = "SIP dialog state management for SBC"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
proto-dialog = { path = "../proto-dialog" }

[lints]
workspace = true
