[package]
name = "sbc-dtls"
description = "DTLS implementation for secure media transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
sbc-types.workspace = true
sbc-crypto.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytes.workspace = true

# DTLS (using webrtc-dtls with CNSA 2.0 configuration)
webrtc-dtls = "0.12"
webrtc-util = "0.17"
async-trait = "0.1"

[lints]
workspace = true
