[package]
name = "sbc-media-engine"
description = "Media processing and orchestration engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
sbc-types.workspace = true
sbc-codecs = { path = "../sbc-codecs" }
sbc-rtp = { path = "../sbc-rtp" }
sbc-srtp = { path = "../sbc-srtp" }
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytes.workspace = true

[lints]
workspace = true
