[package]
name = "sbc-registrar"
description = "SIP registration and location service for SBC"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
proto-registrar = { path = "../proto-registrar" }

[lints]
workspace = true
