[package]
name = "sbc-sdp"
description = "SDP parsing and manipulation for media negotiation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
sbc-types.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
